	PR binutils/13297 	* resrc.c (write_rc_dialog_control): Omit text dump for 	EDITTEXT, COMBOBOX, LISTBOX, and SCROLLBAR.